--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
                     <div class="video-info">
                         <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                         <div class="channel">Vito Iacopelli</div>
-                        <div class="date">11 minutes ago</div>
+                        <div class="date">25 minutes ago</div>
                     </div>
                 </a>
             </div>
@@ -134,7 +134,7 @@
                     <div class="video-info">
                         <h3>Vikkstar at Singapore F1 🏁</h3>
                         <div class="channel">Vikkstar123</div>
-                        <div class="date">2 hours ago</div>
+                        <div class="date">3 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -156,7 +156,7 @@
                     <div class="video-info">
                         <h3>Eckhart Tolle on the Zen Journey to Spiritual Awakening</h3>
                         <div class="channel">Eckhart Tolle</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -167,7 +167,7 @@
                     <div class="video-info">
                         <h3>GINGE STINKER!!!!!</h3>
                         <div class="channel">MoreSidemen</div>
-                        <div class="date">3 hours ago</div>
+                        <div class="date">4 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -222,7 +222,7 @@
                     <div class="video-info">
                         <h3>How Often Do Stocks Bounce After a Big Drop?</h3>
                         <div class="channel">Quantified Strategies</div>
-                        <div class="date">11 hours ago</div>
+                        <div class="date">12 hours ago</div>
                     </div>
                 </a>
             </div>
@@ -2349,7 +2349,7 @@
                     <div class="video-info">
                         <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
                         <div class="channel">SagutoGolf</div>
-                        <div class="date">4 weeks ago</div>
+                        <div class="date">Sep 08, 2025</div>
                     </div>
                 </a>
             </div>
@@ -5105,7 +5105,7 @@
                         <div class="video-info">
                             <h3>How Often Do Stocks Bounce After a Big Drop?</h3>
                             <div class="channel">Quantified Strategies</div>
-                            <div class="date">11 hours ago</div>
+                            <div class="date">12 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -7238,7 +7238,7 @@
                         <div class="video-info">
                             <h3>Eckhart Tolle on the Zen Journey to Spiritual Awakening</h3>
                             <div class="channel">Eckhart Tolle</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -8735,7 +8735,7 @@
                         <div class="video-info">
                             <h3>Your favorite? 40sec -1 - 2 - 3 - 4 - 5 or 7min. ?</h3>
                             <div class="channel">Vito Iacopelli</div>
-                            <div class="date">11 minutes ago</div>
+                            <div class="date">25 minutes ago</div>
                         </div>
                     </a>
                 </div>
@@ -9478,7 +9478,7 @@
                         <div class="video-info">
                             <h3>He Figured Out the Golf Swing! "Now I Drive it 260 and Hit 7-Iron 170"</h3>
                             <div class="channel">SagutoGolf</div>
-                            <div class="date">4 weeks ago</div>
+                            <div class="date">Sep 08, 2025</div>
                         </div>
                     </a>
                 </div>
@@ -9572,7 +9572,7 @@
                         <div class="video-info">
                             <h3>Vikkstar at Singapore F1 🏁</h3>
                             <div class="channel">Vikkstar123</div>
-                            <div class="date">2 hours ago</div>
+                            <div class="date">3 hours ago</div>
                         </div>
                     </a>
                 </div>
@@ -9583,7 +9583,7 @@
                         <div class="video-info">
                             <h3>GINGE STINKER!!!!!</h3>
                             <div class="channel">MoreSidemen</div>
-                            <div class="date">3 hours ago</div>
+                            <div class="date">4 hours ago</div>
                         </div>
                     </a>
                 </div>
